fix: 'Get Involved' button spacing in Empowerment Partners Section'

--- a/app/static/styles/womens_activism.css
+++ b/app/static/styles/womens_activism.css
@@ -1170,6 +1170,7 @@ p, div {
     font-size: 18px;
     line-height: 30px;
     font-weight: 100;
+    min-height: 210px;
 }
 
 .get-involved-btn {
